@@ -71,6 +71,7 @@ Fixes:
 * Fixed an issue with the stats sprite for the pause menu callbacks where it ended up holding garbage data
 * Fixed some broken EventCounter enums
 * Fixed PRE/POST_ENTITY_THROW EntityPlayer argument being pushed as optional parameter
+* Fixed crash when calling Game():MoveToRandomRoom() with seed 0
 /newline/
 /newline/
 v1.0.5a -
